--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,16 @@ before_install:
 
 script:
   - docker run -e CI=true alessandromacri/docker-simple-react-fe npm test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-simple-react-fe"
+  env: "Dockersimplereactfe-env"
+  bucket_name: "elasticbeanstalk-us-east-2-887002784570"
+  bucket_path: "docker-simple-react-fe"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: 
+    secure: $AWS_SECRET_KEY
